# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.30.1
	Martin Väth <martin at mvath.de>:
	- Add maskreason to --xml output
	- Update email
	- internal: remove redundant ATTRIBUTE_NONNULL
	- contrib/make.sh: Fix ccache handling
	- Check whether dropping of permissions worked
	- Fix message if EIX_LIMIT{,_COMPACT} equals number of all packages
	  output, see http://bugs.gentoo.org/show_bug.cgi?id=497232
	- eix-header: Add comment that -f is non-optional for portable scripts,
	  see http://bugs.gentoo.org/show_bug.cgi?id=497572
	- Use -fPIE -pie with --enable-security, see
	  http://bugs.gentoo.org/show_bug.cgi?id=497546

*eix-0.30.0
	Martin Väth <martin at mvath.de>:
	- Introduce {mainrepo} attribute; "Find open bugs" only for those, see
	  http://developer.berlios.de/bugs/?func=detailbug&bug_id=19160&
	  group_id=11597
	- Introduce OMIT_EXPAND and <{colli,}use0> attributes to omit output of
	  USE_EXPAND variables: http://bugs.gentoo.org/show_bug.cgi?id=489306
	- Let --version output only version number
	- scripts: Let -i also reset -H properly
	- Avoid #include of algorithm.h in packagetest and of packagest.h in
	  mask.h. This avoids "phantom" code with some gcc versions and flto:
	  http://developer.berlios.de/bugs/?func=detailbug&
	  bug_id=19182&group_id=11597
	- Use constexpr for some constants (if supported by dialect, of course)
	- Use gettext-0.18.3: allows to specify GNU sed
	- Remove --with-nongnu-cxx (no kludges needed anymore for current clang
	  and/or ccache; it is now the task of the user to export appropriate
	  CCACHE_CPP2 or CXXFLAGS if he needs them for older versions.)
	  This fixes http://bugs.gentoo.org/show_bug.cgi?id=455078
	- Remove --enable-quickcheck (makes no sense without manual distinction
	  of compilers which was just removed)
	- Dump /usr/bin/env shebangs unless --with-eprefix-default is set.
	  Thanks to SteveL for convincing me.
	  Introduce --with{,out}-sh-shebang for overriding if necessary