@@ -1,5 +1,10 @@
 # ChangeLog for eix - Ebuild IndeX for portage
 
+*eix-0.30.2
+	Martin Väth <martin at mvath.de>:
+	- manpage: Add reference to color variables in FAQ and fix typos from
+	  http://bugs.gentoo.org/show_bug.cgi?id=499932
+
 *eix-0.30.1
 	Martin Väth <martin at mvath.de>:
 	- Add maskreason to --xml output
